<resources>
    <string name="app_name">FrugalFoodie</string>
    <string name="create_account_banner">Sign up below</string>
    <string name="create_account_username">Username</string>
    <string name="create_account_password">Password</string>
    <string name="create_account_button_text">Sign up</string>
    <string name="create_account_password_helper_text">Password must be at least 8 characters long. There must be at least 3 letters and 2 numbers.</string>
    <string name="search_ingredients_title">Search By Ingredients</string>
    <string name="search_ingredients_button_text">Search</string>
    <string name="title_activity_view_recipe">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="titleText">Title Text</string>
    <string name="button_home">Home</string>
    <string name="ingredientTitle">INGREDIENTS</string>
    <string name="ingredientsText">IngredientsText</string>
    <string name="directionsTitle">DIRECTIONS</string>
    <string name="directionsText">DirectionsText</string>
    <string name="upload_recipe_title">Upload Recipe</string>
    <string name="upload_recipe_name">Name</string>
    <string name="upload_recipe_ingredients">Ingredients</string>
    <string name="upload_recipe_directions">Directions</string>
    <string name="upload_recipe_button_text">Upload</string>
    <string name="delete_recipe_button_text">Delete Recipe</string>
    <string name="title_text">title</string>
    <string name="ingredientList">IngredientList</string>
</resources>